# Langchain-v1-Agents

./: .gitignore  01-basic-agent-with-model-string.py  01_basic_agent_model_string.ipynb  02-agent-with-explicit-model-instance.py  02_agent_model_instance.ipynb  03-dynamic-model-selection.py  03_dynamic_model_selection.ipynb  04-sophisticated-content-aware-model-selection.py  04_advanced_model_selection.ipynb  05-different-tool-configuration-methods.py  05_tool_configurations.ipynb  06-three-methods-of-prompt-configuration.py  06_prompt_configurations.ipynb  07-structured-output-with-pydantic-models.py  07_structured_output.ipynb  08-custom-state-for-memory-management.py  08_custom_state_management.ipynb  09-pre-model-and-post-model-hooks.py  09_streaming_responses.ipynb  10-streaming-responses-for-real-time-interaction.py  11-complete-production-ready-agent.py  Project Setup.md  README.md  TOOLS_README.md  agents.py  langchain_agents_presentation.html  main.py  pyproject.toml  requirements.txt  tools.py
.claude/: settings.local.json
code_notebooks/: 01_basic_agent_model_string.ipynb  02_agent_model_instance.ipynb  03_dynamic_model_selection.ipynb  04_advanced_model_selection.ipynb  05_tool_configurations.ipynb  06_prompt_configurations.ipynb  07_structured_output.ipynb  08_custom_state_management.ipynb  09_streaming_responses.ipynb  10_short_term_memory.ipynb  tools.py
code_notebooks/langchain_tools/: user_preferences.json
