[project]
name = "langchain-v1-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "firecrawl-py>=4.3.6",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0a7",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.4.0.dev0",
    "langchain-ollama>=0.3.8",
    "langgraph>=1.0.0a4",
    "markitdown>=0.1.3",
    "ollama>=0.6.0",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
]
